<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/parcel_location_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGrey"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/parcel_location"
                android:typeface="sans" />

            <TextView
                android:id="@+id/parcel_location_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/delivery_address"
                android:textColor="@color/colorBlack"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/estimate_delivery_time"
                android:typeface="sans" />

            <TextView
                android:id="@+id/parcel_estimate_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/delivery_address"
                android:textColor="@color/colorBlack"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/location_last_updated"
                android:typeface="sans" />

            <TextView
                android:id="@+id/parcel_location_updated_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/date_time_here"
                android:textColor="@color/colorBlack"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/parcel_location_info"
        android:layout_centerHorizontal="true">

        <com.google.android.gms.maps.MapView
            android:id="@+id/display_google_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</RelativeLayout>